@@ -5,6 +5,7 @@ plugins {
     alias(libs.plugins.sonar)
     alias(libs.plugins.gms)
     alias(libs.plugins.composeCompiler)
+    alias(libs.plugins.ksp)
     id("jacoco")
 }
 
@@ -171,8 +172,15 @@ dependencies {
     implementation(libs.credentials.play.services.auth)
     implementation(libs.googleid)
 
+    // ----------       Room Database    ------------
+    implementation(libs.room)
+    implementation(libs.room.runtime)
+    annotationProcessor(libs.room.compiler)
+    ksp(libs.room.compiler)
+
     androidTestImplementation("io.mockk:mockk-android:1.13.10")
     testImplementation("junit:junit:4.13.2")
+    testImplementation("com.google.truth:truth:1.4.4")
     testImplementation("io.mockk:mockk:1.13.10")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.0")
     testImplementation("androidx.arch.core:core-testing:2.2.0")
@@ -185,6 +193,10 @@ tasks.withType<Test> {
         isIncludeNoLocationClasses = true
         excludes = listOf("jdk.internal.*")
     }
+    jvmArgs(
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
 }
 
 tasks.register("jacocoTestReport", JacocoReport::class) {
